--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,72 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@inreview{huey2025imitationlearningsingletemporally,
+  title       = {Imitation Learning from a Single Temporally Misaligned Video},
+  author      = {William Huey and Huaxiaoyue Wang and Anne Wu and Yoav Artzi and Sanjiban Choudhury},
+  booktitle   = {},
+  year        = {2025},
+  url         = {https://arxiv.org/abs/2502.05397},
+  arxiv       = {https://arxiv.org/abs/2502.05397},
+  code        = {https://github.com/portal-cornell/orca},
+  preview     = {orca.png},
+  publication = {true},
+  tldr        = {To learn from a single video, current approaches leverage an image encoder, distance metric on the encoder's latent space, and distribution-matching algorithm to produce dense rewards for RL. We prove that frame-level distribution matching algorithms cannot accurately model the ground truth reward of a video demonstration. We propose ORCA (ORdered Coverage Alignment), an intuitive algorithm that matches distributions at the sequence level, achieving better performance on 16 video-imitation tasks in two simulation environments.},
+  selected    = {true}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+
+@inproceedings{wang2024time,
+  title       = {Time Your Rewards: Learning Temporally Consistent Rewards from a Single Video Demonstration},
+  author      = {Huaxiaoyue Wang and William Huey and Anne Wu and Yoav Artzi and Sanjiban Choudhury},
+  booktitle   = {CoRL 2024 Workshop on Whole-body Control and Bimanual Manipulation: Applications in Humanoids and Beyond},
+  year        = {2024},
+  url         = {https://openreview.net/forum?id=gsgkiuv9BS},
+  openreview  = {https://openreview.net/forum?id=gsgkiuv9BS},
+  code        = {https://github.com/portal-cornell/CrossQ/tree/dev/refactor},
+  preview     = {tyr.png},
+  publication = {true},
+  tldr        = {We show that existing approaches for inferring reward functions from video demonstrations result in temporal inconsistencies: agents complete subtasks in the wrong order, get stuck along the expert trajectory, or fail to stay in the final state. Our approach mitigates this problem, solving humanoid control tasks quickly and efficiently.}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+
+
+@project{ovtrav,
+  title       = {Distilling Vision-Language Models for Real-Time Traversability Prediction},
+  author      = {William Huey and Sean Brynjolfsson and Donald Greenberg},
+  booktitle   = {Cornell Discover Undergraduate Research in Engineering Showcase},
+  year        = {2024},
+  url         = {vtrav.pdf},
+  pdf         = {vtrav.pdf},
+  code        = {https://github.com/willh003/ovt},
+  poster      = {dureposter.pdf},
+  preview     = {anymal_site.gif},
+  publication = {false},
+  tldr        = {We show that large pretrained vision language models can accurately predict traversability. We distill fast traversability prediction models that run in real time on robot hardware, allowing for long horizon unguided exploration.
+                 }
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+
+@project{superedge,
+  title       = {SuperEdge: A CNN-Based Approach for Quadruped Traversability Analysis from Incomplete Observations},
+  author      = {William Huey},
+  booktitle   = {CS 4756: Robot Learning Final Project},
+  year        = {2023},
+  preview     = {superedge.png},
+  pdf         = {superedge.pdf},
+  code        = {https://github.com/willh003/isaac-anymal-runner},
+  video       = {https://www.youtube.com/watch?v=5CyWaL-u3ro&feature=youtu.be},
+  publication = {false},
+  tldr        = {
+                 I demonstrate self-supervised traversability learning in simulation given sparse point cloud observations. To support this project, I developed a navigation stack for legged robots in Nvidia Isaac Sim, which includes traversability estimation, environment graph generation, graph search, and path tracking.
+                 }
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@project{superedge,
+  title       = {Practices in Combinatorial Testing Relevant to Spacecraft Software Verification},
+  author      = {William Huey and D. Richard Kuhn and William Stanton},
+  booktitle   = {NASA Summer Intern Symposium},
+  year        = {2022},
+  preview     = {ctfsm.png},
+  publication = {false}
 }
